# Ray-Tracing-Renderer

./: BVH.hpp  BoundingBox.hpp  CMakeLists.txt  Function.hpp  Intersection.hpp  Material.hpp  MeshTriangle.hpp  Object.hpp  README.md  Scene.hpp  Sphere.hpp  Triangle.hpp  main.cpp
demo/: README.md  cornellbox-1.ppm  cornellbox-2.ppm  cornellbox-3.ppm  cornellbox-4.ppm  readme.md
milestone/: BVH.hpp  BoundingBox.hpp  CMakeLists.txt  Intersection.hpp  MeshTriangle.hpp  Object.hpp  Scene.hpp  Triangle.hpp  main.cpp
tem/: BVH.hpp  BoundingBox.hpp  Intesection.hpp  MeshTriangle.hpp  Object.hpp  Scene.hpp  Triangle.hpp
tem1/: BVH.hpp  Intersection.hpp  MeshTriangle.hpp  Object.hpp  Scene.hpp  Triangle.hpp  main.cpp
tem2/: CMakeLists.txt  Intersection.hpp  Material.hpp  MeshTriangle.hpp  Object.hpp  Scene.hpp  Triangle.hpp  main.cpp
